<resources>
    <string name="app_name">FaceApp</string>
    <string name="ahmed_ibrahim">Ahmed Ibrahim</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="_5000_comment">5000 comment</string>
    <string name="_3000">3000</string>
    <string name="todo">TODO</string>
    <string name="add_story">Add story</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="points">...</string>
    <string name="bio">Bio</string>
    <string name="android_developer">Android Developer</string>
    <string name="android_java_and_kotlin_developer">android Java and Kotlin Developer</string>
    <string name="featured_pictures">Featured Pictures</string>
    <string name="ahmed_ibrahim_mahmoud">Ahmed Ibrahim Mahmoud</string>
    <string name="name_of_person">Name of person</string>
    <string name="block">Block</string>
    <string name="hide">Hide</string>
    <string name="cancel">Cancel</string>
    <string name="type_a_comment">type a comment</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="item">Item</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="video">Video</string>
    <string name="group">Group</string>
    <string name="notifications">Notifications</string>
    <string name="me">Me</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="person">Person</string>
</resources>