<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/home"
        android:id="@+id/homeM"
        android:icon="@drawable/ic_baseline_home_24"
        />
    <item
        android:id="@+id/friends"
        android:title="@string/friends"
        android:icon="@drawable/ic_baseline_group_24"/>

    <item
        android:id="@+id/video"
        android:title="@string/video"
        android:icon="@drawable/ic_baseline_ondemand_video_24"/>
    <item android:id="@+id/notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_notifications_none_24"/>
    <item android:id="@+id/me"
        android:title="@string/person"
        android:icon="@drawable/ic_baseline_person_24"/>
</menu>